@@ -11,16 +11,20 @@
    [metabase.config :as config]
    [metabase.db.connection :as mdb.connection]
    [metabase.db.custom-migrations :as custom-migrations]
+   [metabase.db.encryption :as mdb.encryption]
    [metabase.db.jdbc-protocols :as mdb.jdbc-protocols]
    [metabase.db.liquibase :as liquibase]
    [metabase.plugins.classloader :as classloader]
    [metabase.util :as u]
+   [metabase.util.encryption :as encryption]
    [metabase.util.honey-sql-2]
    [metabase.util.i18n :refer [trs]]
    [metabase.util.log :as log]
    [metabase.util.malli :as mu]
    [metabase.util.malli.schema :as ms]
+   [metabase.util.string :as string]
    [methodical.core :as methodical]
+   [toucan2.core :as t2]
    [toucan2.honeysql2 :as t2.honeysql]
    [toucan2.jdbc.options :as t2.jdbc.options]
    [toucan2.pipeline :as t2.pipeline])
@@ -73,38 +77,38 @@
     (liquibase/with-liquibase [liquibase conn]
       (try
         ;; Consolidating the changeset requires the lock, so we may need to release it first.
-       (when (= :force direction)
-         (liquibase/release-lock-if-needed! liquibase))
+        (when (= :force direction)
+          (liquibase/release-lock-if-needed! liquibase))
         ;; Releasing the locks does not depend on the changesets, so we skip this step as it might require locking.
-       (when-not (= :release-locks direction)
-         (liquibase/consolidate-liquibase-changesets! conn liquibase))
+        (when-not (= :release-locks direction)
+          (liquibase/consolidate-liquibase-changesets! conn liquibase))
 
-       (log/info "Liquibase is ready.")
-       (case direction
-         :up            (liquibase/migrate-up-if-needed! liquibase data-source)
-         :force         (liquibase/force-migrate-up-if-needed! liquibase data-source)
-         :down          (apply liquibase/rollback-major-version conn liquibase args)
-         :print         (print-migrations-and-quit-if-needed! liquibase data-source)
-         :release-locks (liquibase/force-release-locks! liquibase))
+        (log/info "Liquibase is ready.")
+        (case direction
+          :up            (liquibase/migrate-up-if-needed! liquibase data-source)
+          :force         (liquibase/force-migrate-up-if-needed! liquibase data-source)
+          :down          (apply liquibase/rollback-major-version conn liquibase args)
+          :print         (print-migrations-and-quit-if-needed! liquibase data-source)
+          :release-locks (liquibase/force-release-locks! liquibase))
        ;; Migrations were successful; commit everything and re-enable auto-commit
-       (.commit conn)
-       (.setAutoCommit conn true)
-       :done
+        (.commit conn)
+        (.setAutoCommit conn true)
+        :done
        ;; In the Throwable block, we're releasing the lock assuming we have the lock and we failed while in the
        ;; middle of a migration. It's possible that we failed because we couldn't get the lock. We don't want to
        ;; clear the lock in that case, so handle that case separately
-       (catch LockException e
-         (.rollback conn)
-         (throw e))
+        (catch LockException e
+          (.rollback conn)
+          (throw e))
        ;; If for any reason any part of the migrations fail then rollback all changes
-       (catch Throwable e
-         (.rollback conn)
+        (catch Throwable e
+          (.rollback conn)
          ;; With some failures, it's possible that the lock won't be released. To make this worse, if we retry the
          ;; operation without releasing the lock first, the real error will get hidden behind a lock error
-         (liquibase/release-lock-if-needed! liquibase)
-         (throw e))))))
+          (liquibase/release-lock-if-needed! liquibase)
+          (throw e))))))
 
-(mu/defn ^:private verify-db-connection
+(mu/defn- verify-db-connection
   "Test connection to application database with `data-source` and throw an exception if we have any troubles
   connecting."
   [db-type     :- :keyword
@@ -120,13 +124,37 @@
       (log/infof "Successfully verified %s %s application database connection. %s"
                  (.getDatabaseProductName metadata) (.getDatabaseProductVersion metadata) (u/emoji "✅")))))
 
-(mu/defn ^:private error-if-downgrade-required!
+(mu/defn- check-encryption
+  "Ensure encryption env variable is correctly set if needed, and encrypt the database if it needs to be
+  Encryption status is tracked by an 'encryption-check' value in the settings table.
+  NOTE: the encryption-check setting is not managed like most settings with 'defsetting' so we can manage checking the raw values in the database"
+  []
+  (let [raw (try (t2/select-one-fn :value :setting :key "encryption-check")
+                 (catch Throwable e (log/warn e "Error checking encryption status, assuming unencrypted")))
+        looks-encrypted (not= raw "unencrypted")]
+    (log/debug "Checking encryption configuration")
+    (when-not (nil? raw)
+      (if looks-encrypted
+        (do
+          (when-not (encryption/default-encryption-enabled?)
+            (throw (ex-info "Database is encrypted but the MB_ENCRYPTION_SECRET_KEY environment variable was NOT set" {})))
+          (when-not (string/valid-uuid? (encryption/maybe-decrypt raw))
+            (throw (ex-info "Database was encrypted with a different key than the MB_ENCRYPTION_SECRET_KEY environment contains" {})))
+          (log/debug "Database encrypted and MB_ENCRYPTION_SECRET_KEY correctly configured"))
+        (if (encryption/default-encryption-enabled?)
+          (do
+            (log/info "New MB_ENCRYPTION_SECRET_KEY environment variable set. Encrypting database...")
+            (mdb.encryption/encrypt-db (:db-type mdb.connection/*application-db*) (:data-source mdb.connection/*application-db*) nil)
+            (log/info "Database encrypted..." (u/emoji "✅")))
+          (log/debug "Database not encrypted and MB_ENCRYPTION_SECRET_KEY env variable not set."))))))
+
+(mu/defn- error-if-downgrade-required!
   [data-source :- (ms/InstanceOfClass javax.sql.DataSource)]
   (log/info (u/format-color 'cyan "Checking if a database downgrade is required..."))
   (with-open [conn (.getConnection ^javax.sql.DataSource data-source)]
     (liquibase/with-liquibase [liquibase conn]
       (let [latest-available (liquibase/latest-available-major-version liquibase)
-            latest-applied (liquibase/latest-applied-major-version conn)]
+            latest-applied   (liquibase/latest-applied-major-version conn (.getDatabase liquibase))]
         ;; `latest-applied` will be `nil` for fresh installs
         (when (and latest-applied (< latest-available latest-applied))
           (throw (ex-info
@@ -134,14 +162,14 @@
                        "\n\n"
                        (trs "Your metabase instance appears to have been downgraded without a corresponding database downgrade.")
                        "\n\n"
-                       (trs "You must run `java -jar metabase.jar migrate down` from version {0}." latest-applied)
+                       (trs "You must run `java --add-opens java.base/java.nio=ALL-UNNAMED -jar metabase.jar migrate down` from version {0}." latest-applied)
                        "\n\n"
                        (trs "Once your database has been downgraded, try running the application again.")
                        "\n\n"
                        (trs "See: https://www.metabase.com/docs/latest/installation-and-operation/upgrading-metabase#rolling-back-an-upgrade"))
                   {})))))))
 
-(mu/defn ^:private run-schema-migrations!
+(mu/defn- run-schema-migrations!
   "Run through our DB migration process and make sure DB is fully prepared"
   [data-source   :- (ms/InstanceOfClass javax.sql.DataSource)
    auto-migrate? :- :boolean]
@@ -162,9 +190,10 @@
       (binding [mdb.connection/*application-db*           (mdb.connection/application-db db-type data-source :create-pool? false) ; should already be a pool
                 config/*disable-setting-cache*            true
                 custom-migrations/*create-sample-content* create-sample-content?]
-         (verify-db-connection db-type data-source)
-         (error-if-downgrade-required! data-source)
-         (run-schema-migrations! data-source auto-migrate?))))
+        (verify-db-connection db-type data-source)
+        (error-if-downgrade-required! data-source)
+        (run-schema-migrations! data-source auto-migrate?)
+        (check-encryption))))
   :done)
 
 (defn release-migration-locks!
